[FIX] Wrong colors in tier maker

--- a/src/components/DropZone/DropZone.css
+++ b/src/components/DropZone/DropZone.css
@@ -79,16 +79,16 @@
     color: white;
 }
 
-.purple {
-    background-color: purple;
+.violet {
+    background-color: violet;
     color: white;
 }
 
-.blue {
-    background-color: blue;
+.lightblue {
+    background-color: lightblue;
     color: white;
 }
-.orange {
-    background-color: orange;
-    color: white;
+.yellow {
+    background-color: yellow;
+    color: black;
 }
